@@ -325,6 +325,10 @@ td {
    "svn:mime-type" property value, set the <code>svn_ignore_mimetype</code>
    configuration option.</p>
 
+<p>Speaking of MIME types, the option <code>mime_types_file</code> is
+   now <code>mime_types_files</code>, as it now carries multiple paths
+   to MIME mappings files, ordered by preference.</p>
+
 <p>The <code>use_rcsparse</code> option was moved from the "general"
    section to the "options" section.</p>
 
