@@ -62,6 +62,8 @@ FILE_INFO_LIST = [
     ("viewvc.conf.dist",          "viewvc.conf",               0644, 0, 1, 0),
     ("cvsgraph.conf.dist",        "cvsgraph.conf.dist",        0644, 0, 0, 0),
     ("cvsgraph.conf.dist",        "cvsgraph.conf",             0644, 0, 1, 0),
+    ("mimetypes.conf.dist",       "mimetypes.conf.dist",       0644, 0, 0, 0),
+    ("mimetypes.conf.dist",       "mimetypes.conf",            0644, 0, 1, 0),
     ]
 if sys.platform == "win32":
   FILE_INFO_LIST.extend([
