@@ -37,6 +37,7 @@ Version 1.1.0 (released ??-???-????)
   * allow hiding of errorful entries from the directory view (issue #105)
   * fix directory view sorting UI
   * tolerate malformed Accept-Language headers (issue #396)
+  * allow MIME type mapping overrides in ViewVC configuration (issue #401)
 
 Version 1.0.7 (released 14-Oct-2008)
 
